--- a/src/html-blocks/our-production-list.html
+++ b/src/html-blocks/our-production-list.html
@@ -11,7 +11,6 @@
         от&nbsp;внутрибольничных
         инфекций.
       </p>
-      <p class="quantity">39 видов</p>
     </div>
   </li>
 
@@ -26,7 +25,6 @@
         использовании
         химических веществ.
       </p>
-      <p class="quantity">43 вида</p>
     </div>
   </li>
 
@@ -41,7 +39,6 @@
         защиты
         кожного покрова, а&nbsp;также одежды.
       </p>
-      <p class="quantity">2 вида</p>
     </div>
   </li>
 
@@ -54,7 +51,6 @@
       <p class="text">
         Медицинские костюмы одноразового применения из&nbsp;нетканых материалов с&nbsp;широкой размерной линейкой.
       </p>
-      <p class="quantity">10 видов</p>
     </div>
   </li>
 
@@ -69,7 +65,6 @@
         передающихся
         воздушно-капельным путём.
       </p>
-      <p class="quantity">11 видов</p>
     </div>
   </li>
 
@@ -82,7 +77,6 @@
       <p class="text">
         Эффективно адсорбирует токсины и&nbsp;очищает ваш организм.
       </p>
-      <p class="quantity">39 видов</p>
     </div>
   </li>
 
@@ -95,7 +89,6 @@
       <p class="text">
         Индивидуальные средства гигиены, для обеспечения высокого уровня санитарии в&nbsp;медицинских учреждениях.
       </p>
-      <p class="quantity">6 видов</p>
     </div>
   </li>
 
@@ -108,7 +101,6 @@
       <p class="text">
         Для проведения простых и&nbsp;сложных операций, обеспечивающие защиту от&nbsp;внутрибольничных инфекций.
       </p>
-      <p class="quantity">1 вид</p>
     </div>
   </li>
 
@@ -121,7 +113,6 @@
       <p class="text">
         Различных размеров и&nbsp;плотности, обеспечивающие защиту и&nbsp;комфорт.
       </p>
-      <p class="quantity">67 видов</p>
     </div>
   </li>
 
@@ -134,7 +125,6 @@
       <p class="text">
         Используются для транспортировки биоматериала на&nbsp;исследования.
       </p>
-      <p class="quantity">2 вида</p>
     </div>
   </li>
 
@@ -147,7 +137,6 @@
       <p class="text">
         Предназначены для диагностических и&nbsp;хирургических целей.
       </p>
-      <p class="quantity">2 вида</p>
     </div>
   </li>
 
@@ -159,10 +148,8 @@
       <h6>Шприцы</h6>
       <p class="text">
         Изготовлены из&nbsp;полипропилена, медицинского назначения с&nbsp;манжетом из&nbsp;нетоксичного натурального
-        каучука
-        в&nbsp;блистерной упаковке.
+        каучука.
       </p>
-      <p class="quantity">4 вида</p>
     </div>
   </li>
 
