--- a/src/html-blocks/footer.html
+++ b/src/html-blocks/footer.html
@@ -25,16 +25,25 @@
       </p>
     </address>
     <div class="socials">
-      <a class="mr-m" href="#">
+
+      <a class="mr-m" href="https://wa.me/+77711041201">
         <svg>
           <use xlink:href="#wa-white"></use>
         </svg>
       </a>
-      <a href="#">
+
+      <a class="mr-m" href="https://instagram.com/dolcepharm_products?utm_source=qr&igshid=MzNlNGNkZWQ4Mg==">
         <svg>
           <use xlink:href="#ig-white"></use>
         </svg>
       </a>
+
+      <a href="https://www.facebook.com/dolcepharm.kz?locale=ru_RU">
+        <svg>
+          <use xlink:href="#fb-white"></use>
+        </svg>
+      </a>
+
     </div>
   </div>
 </footer>
