--- a/src/html-blocks/header.html
+++ b/src/html-blocks/header.html
@@ -9,7 +9,7 @@
       <a class="button header-button violet button-download" href="./files/Dolce-catalog.pdf" target="_blank">Скачать
         каталог</a>
       <button class="button header-button blue button-price js-modal-request-buttons">Получить прайс</button>
-      <button class="button header-button corp-violet">Оставить завку</button>
+      <a href="https://wa.me/+77711041201" class="button header-button corp-violet">Оставить завку</a>
       <button class="fz-0" title="Связаться с нами" id="js-modal-phone-button">
         <svg>
           <use xlink:href="#phone-list"></use>
@@ -45,7 +45,7 @@
                 <svg>
                   <use xlink:href="#wa"></use>
                 </svg>
-                <a href="tel:+77711041201">+7 771 104 1201</a>
+                <a href="https://wa.me/+77711041201">+7 771 104 1201</a>
               </label>
             </li>
 
@@ -54,7 +54,17 @@
                 <svg>
                   <use xlink:href="#ig"></use>
                 </svg>
-                <a href="#">@dolce</a>
+                <a
+                  href="https://instagram.com/dolcepharm_products?utm_source=qr&igshid=MzNlNGNkZWQ4Mg==">@dolcepharm_product</a>
+              </label>
+            </li>
+
+            <li>
+              <label>
+                <svg>
+                  <use xlink:href="#fb"></use>
+                </svg>
+                <a href="https://www.facebook.com/dolcepharm.kz?locale=ru_RU">dolcepharm.kz</a>
               </label>
             </li>
 
