--- a/src/html-blocks/advantages.html
+++ b/src/html-blocks/advantages.html
@@ -25,7 +25,7 @@
 
     <h3>Преимущества работы с&nbsp;DOLCE&nbsp;PHARM</h3>
 
-    <div class="positive-wrapper mt-0-75">
+    <div class="positive-wrapper">
 
       <div class="positive-item">
         <svg>
