--- a/src/html-blocks/main-baner.html
+++ b/src/html-blocks/main-baner.html
@@ -26,5 +26,7 @@
 
     </div>
     <div class="swiper-pagination"></div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
   </div>
 </section>
