--- a/src/html-blocks/header.html
+++ b/src/html-blocks/header.html
@@ -8,7 +8,7 @@
     <div class="df--js-sb--ai-c header-buttons">
       <a class="button header-button violet button-download" href="./files/Dolce-catalog.pdf" target="_blank">Скачать
         каталог</a>
-      <button class="button header-button blue button-price js-modal-request-buttons">Получить прайс</button>
+      <button class="button header-button blue button-price js-modal-request-price">Получить прайс</button>
       <a href="https://wa.me/+77711041201" class="button header-button corp-violet">Оставить завку</a>
       <button class="fz-0" title="Связаться с нами" id="js-modal-phone-button">
         <svg>
