--- a/src/html-blocks/header.html
+++ b/src/html-blocks/header.html
@@ -16,71 +16,73 @@
         </svg>
       </button>
 
-      <div class="modal-phone" id="js-modal-phone">
-        <div class="modal-phone--wrapper">
+      <div class="overflow-body js-modal-phone-wrapper">
+        <div class="modal-phone" id="js-modal-phone">
+          <div class="modal-phone--wrapper">
 
-          <div>
-            <button class="fz-0 modal-close js-modal-phone-close" title="Закрыть">
-              <svg>
-                <use xlink:href="#close"></use>
-              </svg>
-            </button>
-          </div>
-
-          <h6>Связаться с нами</h6>
-
-          <ul class="modal-phone--list">
-
-            <li>
-              <label>
+            <div>
+              <button class="fz-0 modal-close js-modal-phone-close" title="Закрыть">
                 <svg>
-                  <use xlink:href="#phone"></use>
+                  <use xlink:href="#close"></use>
                 </svg>
-                <a href="tel:+77711041201">+7 771 104 1201</a>
-              </label>
-            </li>
+              </button>
+            </div>
 
-            <li>
-              <label>
-                <svg>
-                  <use xlink:href="#wa"></use>
-                </svg>
-                <a href="https://wa.me/+77711041201">+7 771 104 1201</a>
-              </label>
-            </li>
+            <h6>Связаться с нами</h6>
 
-            <li>
-              <label>
-                <svg>
-                  <use xlink:href="#ig"></use>
-                </svg>
-                <a
-                  href="https://instagram.com/dolcepharm_products?utm_source=qr&igshid=MzNlNGNkZWQ4Mg==">@dolcepharm_product</a>
-              </label>
-            </li>
+            <ul class="modal-phone--list">
 
-            <li>
-              <label>
-                <svg>
-                  <use xlink:href="#fb"></use>
-                </svg>
-                <a href="https://www.facebook.com/dolcepharm.kz?locale=ru_RU">dolcepharm.kz</a>
-              </label>
-            </li>
+              <li>
+                <label>
+                  <svg>
+                    <use xlink:href="#phone"></use>
+                  </svg>
+                  <a href="tel:+77711041201">+7 771 104 1201</a>
+                </label>
+              </li>
 
-            <li>
-              <label>
-                <svg>
-                  <use xlink:href="#email"></use>
-                </svg>
-                <a href="mailto:vmarketolog@dolcepharm.kz">vmarketolog@dolcepharm.kz</a>
-              </label>
-            </li>
+              <li>
+                <label>
+                  <svg>
+                    <use xlink:href="#wa"></use>
+                  </svg>
+                  <a href="https://wa.me/+77711041201">+7 771 104 1201</a>
+                </label>
+              </li>
 
-          </ul>
+              <li>
+                <label>
+                  <svg>
+                    <use xlink:href="#ig"></use>
+                  </svg>
+                  <a
+                    href="https://instagram.com/dolcepharm_products?utm_source=qr&igshid=MzNlNGNkZWQ4Mg==">@dolcepharm_product</a>
+                </label>
+              </li>
 
-          <div class="df--ai-c--jc-c mt-10px">
-            <button class="button button-light js-modal-phone-close">Закрыть</button>
+              <li>
+                <label>
+                  <svg>
+                    <use xlink:href="#fb"></use>
+                  </svg>
+                  <a href="https://www.facebook.com/dolcepharm.kz?locale=ru_RU">dolcepharm.kz</a>
+                </label>
+              </li>
+
+              <li>
+                <label>
+                  <svg>
+                    <use xlink:href="#email"></use>
+                  </svg>
+                  <a href="mailto:vmarketolog@dolcepharm.kz">vmarketolog@dolcepharm.kz</a>
+                </label>
+              </li>
+
+            </ul>
+
+            <div class="df--ai-c--jc-c mt-10px">
+              <button class="button button-light js-modal-phone-close">Закрыть</button>
+            </div>
           </div>
         </div>
       </div>
