--- a/src/html-blocks/main-baner.html
+++ b/src/html-blocks/main-baner.html
@@ -5,21 +5,27 @@
 
       <div class="swiper-slide">
         <div class="img-wrapper">
-          <img src="./img/promotion/Baners_1600x800-shoe-covers.jpg" alt="Акция на бахилы">
+          <img srcset="./img/promotion/Baners_1600x650-shoe-covers.jpg 1600w,
+            ./img/promotion/Baners_600x600-shoe-covers.jpg 600w" sizes="(max-width: 576px) 100vw, 1600px"
+            src="./img/promotion/Baners_1600x650-shoe-covers.jpg" alt="Акция на бахилы">
           <button class="main-baner-button orange js-main-baner-button">Заказать</button>
         </div>
       </div>
 
       <div class="swiper-slide">
         <div class="img-wrapper">
-          <img src="./img/promotion/Baners_1600x800-gloves.jpg" alt="Акция на перчатки">
+          <img srcset="./img/promotion/Baners_1600x650-gloves.jpg 1600w, 
+            ./img/promotion/Baners_600x600-gloves.jpg 600w" sizes="(max-width: 576px) 100vw, 1600px"
+            src="./img/promotion/Baners_1600x650-gloves.jpg" alt="Акция на перчатки">
           <button class="main-baner-button orange js-main-baner-button">Заказать</button>
         </div>
       </div>
 
       <div class="swiper-slide">
         <div class="img-wrapper">
-          <img src="./img/promotion/Baners_1600x800-syringes.jpg" alt="Акция на шприцы">
+          <img srcset="./img/promotion/Baners_1600x650-syringes.jpg 1600w,
+            ./img/promotion/Baners_600x600-syringes.jpg 600w" sizes="(max-width: 576px) 100vw, 1600px"
+            src="./img/promotion/Baners_1600x650-syringes.jpg" alt="Акция на шприцы">
           <button class="main-baner-button orange js-main-baner-button">Заказать</button>
         </div>
       </div>
