before 2nd slider

--- a/src/html-blocks/main-baner.html
+++ b/src/html-blocks/main-baner.html
@@ -4,30 +4,27 @@
     <div class="swiper-wrapper">
 
       <div class="swiper-slide">
-        <div class="img-wrapper">
-          <img srcset="./img/promotion/Baners_1600x650-shoe-covers.jpg 1600w,
-            ./img/promotion/Baners_600x600-shoe-covers.jpg 600w" sizes="(max-width: 576px) 100vw, 1600px"
-            src="./img/promotion/Baners_1600x650-shoe-covers.jpg" alt="Акция на бахилы">
-          <button class="main-baner-button orange js-main-baner-button">Заказать</button>
-        </div>
+        <picture class="img-wrapper">
+          <source type="image/jpg" srcset="./img/promotion/Baners_600x600-shoe-covers.jpg" media="(max-width: 610px)" />
+          <img src="./img/promotion/Baners_1600x650-shoe-covers.jpg" alt="Акция на бахилы">
+        </picture>
+        <button class="main-baner-button orange js-main-baner-button">Заказать</button>
       </div>
 
       <div class="swiper-slide">
-        <div class="img-wrapper">
-          <img srcset="./img/promotion/Baners_1600x650-gloves.jpg 1600w, 
-            ./img/promotion/Baners_600x600-gloves.jpg 600w" sizes="(max-width: 576px) 100vw, 1600px"
-            src="./img/promotion/Baners_1600x650-gloves.jpg" alt="Акция на перчатки">
-          <button class="main-baner-button orange js-main-baner-button">Заказать</button>
-        </div>
+        <picture class="img-wrapper">
+          <source type="image/jpg" srcset="./img/promotion/Baners_600x600-gloves.jpg" media="(max-width: 610px)" />
+          <img src="./img/promotion/Baners_1600x650-gloves.jpg" alt="Акция на перчатки">
+        </picture>
+        <button class="main-baner-button orange js-main-baner-button">Заказать</button>
       </div>
 
       <div class="swiper-slide">
-        <div class="img-wrapper">
-          <img srcset="./img/promotion/Baners_1600x650-syringes.jpg 1600w,
-            ./img/promotion/Baners_600x600-syringes.jpg 600w" sizes="(max-width: 576px) 100vw, 1600px"
-            src="./img/promotion/Baners_1600x650-syringes.jpg" alt="Акция на шприцы">
-          <button class="main-baner-button orange js-main-baner-button">Заказать</button>
-        </div>
+        <picture class="img-wrapper">
+          <source type="image/jpg" srcset="./img/promotion/Baners_600x600-syringes.jpg" media="(max-width: 610px)" />
+          <img src="./img/promotion/Baners_1600x650-syringes.jpg" alt="Акция на шприцы">
+        </picture>
+        <button class="main-baner-button orange js-main-baner-button">Заказать</button>
       </div>
 
     </div>
