--- a/src/html-blocks/our-production-list.html
+++ b/src/html-blocks/our-production-list.html
@@ -1,156 +1,159 @@
-<ul class="mt-1">
+<div class="mobSwiper">
+  <ul class="mt-1 swiper-wrapper">
 
-  <li>
-    <div class="our-production--photo df--ai-c">
-      <img src="./img/our-production-01.jpg" alt="">
-    </div>
-    <div class="our-production--description">
-      <h6>Операционные наборы</h6>
-      <p class="text">
-        Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
-        от&nbsp;внутрибольничных
-        инфекций.
-      </p>
-    </div>
-  </li>
+    <li class="swiper-slide">
+      <div class="our-production--photo df--ai-c">
+        <img src="./img/our-production-01.jpg" alt="">
+      </div>
+      <div class="our-production--description">
+        <h6>Операционные наборы</h6>
+        <p class="text">
+          Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
+          от&nbsp;внутрибольничных
+          инфекций.
+        </p>
+      </div>
+    </li>
 
-  <li>
-    <div class="our-production--photo df--ai-c">
-      <img src="./img/our-production-02.jpg" alt="">
-    </div>
-    <div class="our-production--description">
-      <h6>Перчатки</h6>
-      <p class="text">
-        Широкий выбор перчаток, обеспечивающих защиту при диагностике, в&nbsp;операционной деятельности, при
-        использовании
-        химических веществ.
-      </p>
-    </div>
-  </li>
+    <li class="swiper-slide">
+      <div class="our-production--photo df--ai-c">
+        <img src="./img/our-production-02.jpg" alt="">
+      </div>
+      <div class="our-production--description">
+        <h6>Перчатки</h6>
+        <p class="text">
+          Широкий выбор перчаток, обеспечивающих защиту при диагностике, в&nbsp;операционной деятельности, при
+          использовании
+          химических веществ.
+        </p>
+      </div>
+    </li>
 
-  <li>
-    <div class="our-production--photo df--ai-c">
-      <img src="./img/our-production-03.jpg" alt="">
-    </div>
-    <div class="our-production--description">
-      <h6>Комбинезоны</h6>
-      <p class="text">
-        Одноразовые защитные комбинезоны производятся из&nbsp;специального лёгкого нетканого полотна, предназначены для
-        защиты
-        кожного покрова, а&nbsp;также одежды.
-      </p>
-    </div>
-  </li>
+    <!-- <li class="swiper-slide">
+      <div class="our-production--photo df--ai-c">
+        <img src="./img/our-production-03.jpg" alt="">
+      </div>
+      <div class="our-production--description">
+        <h6>Комбинезоны</h6>
+        <p class="text">
+          Одноразовые защитные комбинезоны производятся из&nbsp;специального лёгкого нетканого полотна, предназначены
+          для
+          защиты
+          кожного покрова, а&nbsp;также одежды.
+        </p>
+      </div>
+    </li>
 
-  <li>
-    <div class="our-production--photo df--ai-c">
-      <img src="./img/our-production-04.jpg" alt="">
-    </div>
-    <div class="our-production--description">
-      <h6>Медицинские костюмы</h6>
-      <p class="text">
-        Медицинские костюмы одноразового применения из&nbsp;нетканых материалов с&nbsp;широкой размерной линейкой.
-      </p>
-    </div>
-  </li>
+    <li class="swiper-slide">
+      <div class="our-production--photo df--ai-c">
+        <img src="./img/our-production-04.jpg" alt="">
+      </div>
+      <div class="our-production--description">
+        <h6>Медицинские костюмы</h6>
+        <p class="text">
+          Медицинские костюмы одноразового применения из&nbsp;нетканых материалов с&nbsp;широкой размерной линейкой.
+        </p>
+      </div>
+    </li>
 
-  <li>
-    <div class="our-production--photo df--ai-c">
-      <img src="./img/our-production-05.jpg" alt="">
-    </div>
-    <div class="our-production--description">
-      <h6>Маски медицинские</h6>
-      <p class="text">
-        Маски Dolce Pharm&nbsp;&mdash; это профессиональная защита от&nbsp;всех бактерий, инфекций и&nbsp;вирусов,
-        передающихся
-        воздушно-капельным путём.
-      </p>
-    </div>
-  </li>
+    <li class="swiper-slide">
+      <div class="our-production--photo df--ai-c">
+        <img src="./img/our-production-05.jpg" alt="">
+      </div>
+      <div class="our-production--description">
+        <h6>Маски медицинские</h6>
+        <p class="text">
+          Маски Dolce Pharm&nbsp;&mdash; это профессиональная защита от&nbsp;всех бактерий, инфекций и&nbsp;вирусов,
+          передающихся
+          воздушно-капельным путём.
+        </p>
+      </div>
+    </li>
 
-  <li>
-    <div class="our-production--photo df--ai-c">
-      <img src="./img/our-production-06.jpg" alt="">
-    </div>
-    <div class="our-production--description">
-      <h6>Уголь активированный</h6>
-      <p class="text">
-        Эффективно адсорбирует токсины и&nbsp;очищает ваш организм.
-      </p>
-    </div>
-  </li>
+    <li class="swiper-slide">
+      <div class="our-production--photo df--ai-c">
+        <img src="./img/our-production-06.jpg" alt="">
+      </div>
+      <div class="our-production--description">
+        <h6>Уголь активированный</h6>
+        <p class="text">
+          Эффективно адсорбирует токсины и&nbsp;очищает ваш организм.
+        </p>
+      </div>
+    </li>
 
-  <li>
-    <div class="our-production--photo df--ai-c">
-      <img src="./img/our-production-07.jpg" alt="">
-    </div>
-    <div class="our-production--description">
-      <h6>Бахилы и шапочки</h6>
-      <p class="text">
-        Индивидуальные средства гигиены, для обеспечения высокого уровня санитарии в&nbsp;медицинских учреждениях.
-      </p>
-    </div>
-  </li>
+    <li class="swiper-slide">
+      <div class="our-production--photo df--ai-c">
+        <img src="./img/our-production-07.jpg" alt="">
+      </div>
+      <div class="our-production--description">
+        <h6>Бахилы и шапочки</h6>
+        <p class="text">
+          Индивидуальные средства гигиены, для обеспечения высокого уровня санитарии в&nbsp;медицинских учреждениях.
+        </p>
+      </div>
+    </li>
 
-  <li>
-    <div class="our-production--photo df--ai-c">
-      <img src="./img/our-production-08.jpg" alt="">
-    </div>
-    <div class="our-production--description">
-      <h6>Чехлы для операционных</h6>
-      <p class="text">
-        Для проведения простых и&nbsp;сложных операций, обеспечивающие защиту от&nbsp;внутрибольничных инфекций.
-      </p>
-    </div>
-  </li>
+    <li class="swiper-slide">
+      <div class="our-production--photo df--ai-c">
+        <img src="./img/our-production-08.jpg" alt="">
+      </div>
+      <div class="our-production--description">
+        <h6>Чехлы для операционных</h6>
+        <p class="text">
+          Для проведения простых и&nbsp;сложных операций, обеспечивающие защиту от&nbsp;внутрибольничных инфекций.
+        </p>
+      </div>
+    </li>
 
-  <li>
-    <div class="our-production--photo df--ai-c">
-      <img src="./img/our-production-09.jpg" alt="">
-    </div>
-    <div class="our-production--description">
-      <h6>Простыни, подстилки и пеленки</h6>
-      <p class="text">
-        Различных размеров и&nbsp;плотности, обеспечивающие защиту и&nbsp;комфорт.
-      </p>
-    </div>
-  </li>
+    <li class="swiper-slide">
+      <div class="our-production--photo df--ai-c">
+        <img src="./img/our-production-09.jpg" alt="">
+      </div>
+      <div class="our-production--description">
+        <h6>Простыни, подстилки и пеленки</h6>
+        <p class="text">
+          Различных размеров и&nbsp;плотности, обеспечивающие защиту и&nbsp;комфорт.
+        </p>
+      </div>
+    </li>
 
-  <li>
-    <div class="our-production--photo df--ai-c">
-      <img src="./img/our-production-10.jpg" alt="">
-    </div>
-    <div class="our-production--description">
-      <h6>Контейнеры для анализов</h6>
-      <p class="text">
-        Используются для транспортировки биоматериала на&nbsp;исследования.
-      </p>
-    </div>
-  </li>
+    <li class="swiper-slide">
+      <div class="our-production--photo df--ai-c">
+        <img src="./img/our-production-10.jpg" alt="">
+      </div>
+      <div class="our-production--description">
+        <h6>Контейнеры для анализов</h6>
+        <p class="text">
+          Используются для транспортировки биоматериала на&nbsp;исследования.
+        </p>
+      </div>
+    </li>
 
-  <li>
-    <div class="our-production--photo df--ai-c">
-      <img src="./img/our-production-11.jpg" alt="">
-    </div>
-    <div class="our-production--description">
-      <h6>Гинекологические инструменты</h6>
-      <p class="text">
-        Предназначены для диагностических и&nbsp;хирургических целей.
-      </p>
-    </div>
-  </li>
+    <li class="swiper-slide">
+      <div class="our-production--photo df--ai-c">
+        <img src="./img/our-production-11.jpg" alt="">
+      </div>
+      <div class="our-production--description">
+        <h6>Гинекологические инструменты</h6>
+        <p class="text">
+          Предназначены для диагностических и&nbsp;хирургических целей.
+        </p>
+      </div>
+    </li>
 
-  <li>
-    <div class="our-production--photo df--ai-c">
-      <img src="./img/our-production-12.jpg" alt="">
-    </div>
-    <div class="our-production--description">
-      <h6>Шприцы</h6>
-      <p class="text">
-        Изготовлены из&nbsp;полипропилена, медицинского назначения с&nbsp;манжетом из&nbsp;нетоксичного натурального
-        каучука.
-      </p>
-    </div>
-  </li>
+    <li class="swiper-slide">
+      <div class="our-production--photo df--ai-c">
+        <img src="./img/our-production-12.jpg" alt="">
+      </div>
+      <div class="our-production--description">
+        <h6>Шприцы</h6>
+        <p class="text">
+          Изготовлены из&nbsp;полипропилена, медицинского назначения с&nbsp;манжетом из&nbsp;нетоксичного натурального
+          каучука.
+        </p>
+      </div>
+    </li> -->
 
-</ul>
+  </ul>
+</div>
