--- a/src/html-blocks/our-production-list.html
+++ b/src/html-blocks/our-production-list.html
@@ -1,7 +1,7 @@
 <div class="mobSwiper">
-  <ul class="mt-1 swiper-wrapper">
+  <div class="mt-1 swiper-wrapper ul">
 
-    <li class="swiper-slide">
+    <div class="swiper-slide li">
       <div class="our-production--photo df--ai-c">
         <img src="./img/our-production-01.jpg" alt="">
       </div>
@@ -13,9 +13,9 @@
           инфекций.
         </p>
       </div>
-    </li>
+    </div>
 
-    <li class="swiper-slide">
+    <div class="swiper-slide li">
       <div class="our-production--photo df--ai-c">
         <img src="./img/our-production-02.jpg" alt="">
       </div>
@@ -27,24 +27,21 @@
           химических веществ.
         </p>
       </div>
-    </li>
+    </div>
 
-    <!-- <li class="swiper-slide">
+    <div class="swiper-slide li">
       <div class="our-production--photo df--ai-c">
         <img src="./img/our-production-03.jpg" alt="">
       </div>
       <div class="our-production--description">
         <h6>Комбинезоны</h6>
         <p class="text">
-          Одноразовые защитные комбинезоны производятся из&nbsp;специального лёгкого нетканого полотна, предназначены
-          для
-          защиты
-          кожного покрова, а&nbsp;также одежды.
+          Одноразовые защитные комбинезоны производятся из&nbsp;специального лёгкого нетканого полотна.
         </p>
       </div>
-    </li>
+    </div>
 
-    <li class="swiper-slide">
+    <div class="swiper-slide li">
       <div class="our-production--photo df--ai-c">
         <img src="./img/our-production-04.jpg" alt="">
       </div>
@@ -54,9 +51,9 @@
           Медицинские костюмы одноразового применения из&nbsp;нетканых материалов с&nbsp;широкой размерной линейкой.
         </p>
       </div>
-    </li>
+    </div>
 
-    <li class="swiper-slide">
+    <div class="swiper-slide li">
       <div class="our-production--photo df--ai-c">
         <img src="./img/our-production-05.jpg" alt="">
       </div>
@@ -68,9 +65,9 @@
           воздушно-капельным путём.
         </p>
       </div>
-    </li>
+    </div>
 
-    <li class="swiper-slide">
+    <div class="swiper-slide li">
       <div class="our-production--photo df--ai-c">
         <img src="./img/our-production-06.jpg" alt="">
       </div>
@@ -80,9 +77,9 @@
           Эффективно адсорбирует токсины и&nbsp;очищает ваш организм.
         </p>
       </div>
-    </li>
+    </div>
 
-    <li class="swiper-slide">
+    <div class="swiper-slide li">
       <div class="our-production--photo df--ai-c">
         <img src="./img/our-production-07.jpg" alt="">
       </div>
@@ -92,9 +89,9 @@
           Индивидуальные средства гигиены, для обеспечения высокого уровня санитарии в&nbsp;медицинских учреждениях.
         </p>
       </div>
-    </li>
+    </div>
 
-    <li class="swiper-slide">
+    <div class="swiper-slide li">
       <div class="our-production--photo df--ai-c">
         <img src="./img/our-production-08.jpg" alt="">
       </div>
@@ -104,9 +101,9 @@
           Для проведения простых и&nbsp;сложных операций, обеспечивающие защиту от&nbsp;внутрибольничных инфекций.
         </p>
       </div>
-    </li>
+    </div>
 
-    <li class="swiper-slide">
+    <div class="swiper-slide li">
       <div class="our-production--photo df--ai-c">
         <img src="./img/our-production-09.jpg" alt="">
       </div>
@@ -116,9 +113,9 @@
           Различных размеров и&nbsp;плотности, обеспечивающие защиту и&nbsp;комфорт.
         </p>
       </div>
-    </li>
+    </div>
 
-    <li class="swiper-slide">
+    <div class="swiper-slide li">
       <div class="our-production--photo df--ai-c">
         <img src="./img/our-production-10.jpg" alt="">
       </div>
@@ -128,9 +125,9 @@
           Используются для транспортировки биоматериала на&nbsp;исследования.
         </p>
       </div>
-    </li>
+    </div>
 
-    <li class="swiper-slide">
+    <div class="swiper-slide li">
       <div class="our-production--photo df--ai-c">
         <img src="./img/our-production-11.jpg" alt="">
       </div>
@@ -140,9 +137,9 @@
           Предназначены для диагностических и&nbsp;хирургических целей.
         </p>
       </div>
-    </li>
+    </div>
 
-    <li class="swiper-slide">
+    <div class="swiper-slide li">
       <div class="our-production--photo df--ai-c">
         <img src="./img/our-production-12.jpg" alt="">
       </div>
@@ -153,7 +150,8 @@
           каучука.
         </p>
       </div>
-    </li> -->
+    </div>
 
-  </ul>
+  </div>
+  <div class="swiper-pagination"></div>
 </div>
