--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
     <div class="container df--js-sb--ai-c">
       <div class="offer--text">
         <h3>Скидка 5% при первом заказе<br>Бесплатная доставка при первом заказе</h3>
-        <button class="button">Заказать</button>
+        <button class="button js-getOrder-button">Заказать</button>
       </div>
       <div class="offer--image pos-r">
         <img src="./img/doctor-image.png" alt="">
