--- a/src/html-blocks/main-baner.html
+++ b/src/html-blocks/main-baner.html
@@ -8,7 +8,7 @@
           <source type="image/jpg" srcset="./img/promotion/Baners_600x600-shoe-covers.jpg" media="(max-width: 610px)" />
           <img src="./img/promotion/Baners_1600x650-shoe-covers.jpg" alt="Акция на бахилы">
         </picture>
-        <button class="main-baner-button orange js-main-baner-button">Заказать</button>
+        <button class="main-baner-button orange js-getOrder-button">Заказать</button>
       </div>
 
       <div class="swiper-slide">
@@ -16,7 +16,7 @@
           <source type="image/jpg" srcset="./img/promotion/Baners_600x600-gloves.jpg" media="(max-width: 610px)" />
           <img src="./img/promotion/Baners_1600x650-gloves.jpg" alt="Акция на перчатки">
         </picture>
-        <button class="main-baner-button orange js-main-baner-button">Заказать</button>
+        <button class="main-baner-button orange js-getOrder-button">Заказать</button>
       </div>
 
       <div class="swiper-slide">
@@ -24,7 +24,7 @@
           <source type="image/jpg" srcset="./img/promotion/Baners_600x600-syringes.jpg" media="(max-width: 610px)" />
           <img src="./img/promotion/Baners_1600x650-syringes.jpg" alt="Акция на шприцы">
         </picture>
-        <button class="main-baner-button orange js-main-baner-button">Заказать</button>
+        <button class="main-baner-button orange js-getOrder-button">Заказать</button>
       </div>
 
     </div>
