--- a/src/html-blocks/our-production-list.html
+++ b/src/html-blocks/our-production-list.html
@@ -1,4 +1,4 @@
-<div class="mobSwiper">
+<div class="js-mobSwiper">
   <div class="mt-1 swiper-wrapper ul">
 
     <div class="swiper-slide li">
@@ -153,5 +153,4 @@
     </div>
 
   </div>
-  <div class="swiper-pagination"></div>
 </div>
