--- a/src/html-blocks/advantages.html
+++ b/src/html-blocks/advantages.html
@@ -2,85 +2,101 @@
   <div class="container">
     <h3>Сложности при заказе медицинских изделий</h3>
     <ul class="negatives m-0-a">
-      <li>
+      <li class="observer">
         <span>1</span>
         <p>Маленький ассортимент продукции</p>
       </li>
-      <li>
+      <li class="observer">
         <span>2</span>
         <p>Отсутствие или перегруженность складов</p>
       </li>
-      <li>
+      <li class="observer">
         <span>3</span>
         <p>Отсутствие у поставщиков программ лояльности и гибкой системы скидок</p>
       </li>
-      <li>
+      <li class="observer">
         <span>4</span>
         <p>Нет индивидуального подхода и учёта потребностей компании</p>
       </li>
     </ul>
   </div>
 
-  <div class="positive ">
+  <div class="positive">
 
     <h3>Преимущества работы с&nbsp;DOLCE&nbsp;PHARM</h3>
 
     <div class="positive-wrapper">
 
       <div class="positive-item">
-        <svg>
-          <use xlink:href="#budget"></use>
-        </svg>
-        <p>Экономия Вашего<br>бюджета</p>
+        <div class="oserver-animation oserver-animation--flag">
+          <svg>
+            <use xlink:href="#budget"></use>
+          </svg>
+          <p>Экономия Вашего<br>бюджета</p>
+        </div>
       </div>
 
       <div class="positive-item">
-        <svg>
-          <use xlink:href="#assortiment"></use>
-        </svg>
-        <p>Широкий ассортимент продукции и гарантию защиты</p>
+        <div class="oserver-animation oserver-animation--flag">
+          <svg>
+            <use xlink:href="#assortiment"></use>
+          </svg>
+          <p>Широкий ассортимент продукции и гарантию защиты</p>
+        </div>
       </div>
 
       <div class="positive-item">
-        <svg>
-          <use xlink:href="#exclusive"></use>
-        </svg>
-        <p>Эксклюзивные продукты на&nbsp;рынке медицинских изделий</p>
+        <div class="oserver-animation oserver-animation--flag">
+          <svg>
+            <use xlink:href="#exclusive"></use>
+          </svg>
+          <p>Эксклюзивные продукты на&nbsp;рынке медицинских изделий</p>
+        </div>
       </div>
 
       <div class="positive-item">
-        <svg>
-          <use xlink:href="#loyality"></use>
-        </svg>
-        <p>Программа лояльности и конфиденциальности</p>
+        <div class="oserver-animation oserver-animation--flag">
+          <svg>
+            <use xlink:href="#loyality"></use>
+          </svg>
+          <p>Программа лояльности и конфиденциальности</p>
+        </div>
       </div>
 
       <div class="positive-item">
-        <svg>
-          <use xlink:href="#support"></use>
-        </svg>
-        <p>Высокий уровень сервиса и&nbsp;гибкая система оплаты</p>
+        <div class="oserver-animation oserver-animation--flag">
+          <svg>
+            <use xlink:href="#support"></use>
+          </svg>
+          <p>Высокий уровень сервиса и&nbsp;гибкая система оплаты</p>
+        </div>
       </div>
 
       <div class="positive-item">
-        <svg>
-          <use xlink:href="#defence"></use>
-        </svg>
-        <p>Защиту от внутрибольничных инфекций</p>
+        <div class="oserver-animation oserver-animation--flag">
+          <svg>
+            <use xlink:href="#defence"></use>
+          </svg>
+          <p>Защиту от внутрибольничных инфекций</p>
+        </div>
       </div>
 
       <div class="positive-item">
-        <svg>
-          <use xlink:href="#warehouse"></use>
-        </svg>
-        <p>Наличие складских помещений</p>
+        <div class="oserver-animation oserver-animation--flag">
+          <svg>
+            <use xlink:href="#warehouse"></use>
+          </svg>
+          <p>Наличие складских помещений</p>
+        </div>
       </div>
 
       <div class="positive-item">
-        <svg>
-          <use xlink:href="#partnership"></use>
-        </svg>
-        <p>Партнерские<br>программы</p>
+        <div class="oserver-animation oserver-animation--flag">
+          <svg>
+            <use xlink:href="#partnership"></use>
+          </svg>
+          <p>Партнерские<br>программы</p>
+        </div>
       </div>
 
     </div>
